# 3D_Gaussian_Splatting_Research

./: .gitignore  README.md
3DGS/gaussian-splatting-blur/: convert_with_blur.py  train.py
3DGS/gaussian-splatting-blur/arguments/: __init__.py
3DGS/gaussian-splatting-blur/gaussian_renderer/: __init__.py
3DGS/gaussian-splatting-blur/scene/: __init__.py  dataset_readers.py  gaussian_model.py
3DGS/gaussian-splatting-blur/utils/: blur_utils.py
3DGS/wavelets-gaussian-splatting/: train.py
3DGS/wavelets-gaussian-splatting/arguments/: __init__.py
Old_work/neg_op_ges-splatting/: .gitignore
Old_work/simple_neg_op_ges-splatting_working/: train_gaussian.py
Testing Python Sctripts/: 1_Gaussian_plotting_from_scratch.ipynb  2_1Gaussian_plotting_from_scratch_with_neg_op_gaussians_ray_tracing_method_block_wise.ipynb  2_2Gaussian_plotting_from_scratch_with_neg_op_gaussians_with_ray_tracing_method_pixel_wise.ipynb  2_3Gaussian_plotting_from_scratch_Negative_opacity_2d - Copy.ipynb  2d_to_3d.ipynb  Gaussian_plotting.ipynb  get_holes.ipynb  knn.ipynb  test.ipynb
blur_ges-splatting/: train_gaussian.py
blur_ges-splatting/PLYs/: train_default_point_cloud_40000.ply
ges-splatting/: train_gaussian.py
neg_op_ges-splatting/: train_gaussian.py
neg_op_ges-splatting/scene/: gaussian_model.py
neg_op_ges-splatting_working/: .gitignore  Log.txt  train_gaussian.py
neg_op_ges-splatting_working/gaussian_renderer/: __init__.py
neg_op_ges-splatting_working/scene/: gaussian_model.py
neg_op_ges-splatting_working/submodules/diff-gaussian-rasterization/: CMakeLists.txt  rasterize_points.cu  rasterize_points.h
neg_op_ges-splatting_working/submodules/diff-gaussian-rasterization/cuda_rasterizer_for_neg_opacities/: auxiliary.h  backward.cu  backward.h  config.h  forward.cu  forward.h  rasterizer.h  rasterizer_impl.cu  rasterizer_impl.h
neg_op_ges-splatting_working/submodules/diff-gaussian-rasterization/diff_gaussian_rasterization/: __init__.py
neg_op_ges-splatting_working/utils/: blob_detection.py  neg_gauss_init_utils.py
simple_neg_op_ges-splatting_working/scene/: gaussian_model.py
(+58 files in other folders)
